--- a/style.css
+++ b/style.css
@@ -1,121 +1,157 @@
 * {
   padding: 0;
   margin: 0;
-  font-family: Helvetica, sans-serif;
-  background-color: #f4f4f4;
-}
-
-a {
-  color: #000;
-}
-
-/* header */
-.header {
-  background-color: #fff;
-  box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.1);
-  position: fixed;
-  width: 100%;
-  z-index: 3;
-}
-
-.header ul {
-  margin: 0;
-  padding: 0;
+  box-sizing: border-box;
   list-style: none;
-  overflow: hidden;
-  background-color: #fff;
-}
-
-.header li a {
-  display: block;
-  padding: 20px 20px;
-  border-right: 1px solid #f4f4f4;
   text-decoration: none;
+  font-size: 18px;
+  font-family: "Montserrat", sans-serif;
+  scroll-behavior: smooth;
 }
 
-.header li a:hover,
-.header .menu-btn:hover {
-  background-color: #f4f4f4;
+@media (min-width: 950px) {
+  header nav .menuLinks {
+    display: none !important;
+  }
+  header nav .menuLinks2 {
+    display: flex !important;
+    align-items: center;
+    -moz-column-gap: 2rem;
+         column-gap: 2rem;
+  }
+  header nav .menuLinks2 li a {
+    color: hsl(196deg, 35%, 11%);
+    font-size: 1.2rem;
+  }
+  header nav .bars {
+    display: none;
+  }
+  header nav .search_cart {
+    display: flex !important;
+  }
 }
-
-.header .logo {
-  display: block;
-  float: left;
-  font-size: 2em;
-  padding: 10px 20px;
-  text-decoration: none;
-}
-
-/* menu */
-.header .menu {
-  clear: both;
-  max-height: 0;
-  transition: max-height 0.2s ease-out;
-}
-
-/* menu icon */
-.header .menu-icon {
-  cursor: pointer;
-  display: inline-block;
-  float: right;
-  padding: 28px 20px;
-  position: relative;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-}
-
-.header .menu-icon .navicon {
-  background: #333;
-  display: block;
-  height: 2px;
-  position: relative;
-  transition: background 1s ease-out;
-  width: 18px;
-}
-
-.header .menu-icon .navicon:before,
-.header .menu-icon .navicon:after {
-  background: #333;
+.link-1 a:before, .link-1 a:after {
   content: "";
-  display: block;
-  height: 100%;
+  border-bottom: solid 1px white;
   position: absolute;
-  transition: all 0.2s ease-out;
+  bottom: 0;
+  width: 0;
+}
+
+.link-1 a:before {
+  left: 0;
+}
+
+.link-1 a:after {
+  right: 0;
+}
+
+.link-1 a:hover:before, .link-1 a:hover:after {
+  width: 50%;
+}
+
+.link-1 a:before, .link-1 a:after {
+  transition: all 0.2s ease;
+}
+
+header {
   width: 100%;
+  padding-top: 2rem;
+  z-index: 2;
 }
-
-.header .menu-icon .navicon:before {
-  top: 5px;
+header nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 90%;
+  margin: 0 auto;
+  position: relative;
 }
-
-.header .menu-icon .navicon:after {
-  top: -5px;
+header nav .menuLinks2 {
+  display: none;
 }
-
-/* menu btn */
-.header .menu-btn {
+header nav .menuLinks {
+  position: absolute;
+  top: 100%;
+  right: -200%;
+  width: 100%;
+  padding: 3rem 0;
+  background-color: #f4f4f4;
+  -webkit-clip-path: polygon(0px 29px, 90.18% 28.5px, 101.64% -1.67%, 100% 100%, 0px 100%);
+          clip-path: polygon(0px 29px, 90.18% 28.5px, 101.64% -1.67%, 100% 100%, 0px 100%);
+  transition: all 500ms ease;
+}
+header nav .menuLinks li {
+  padding: 1rem;
+  text-align: center;
+}
+header nav .menuLinks li a {
+  font-weight: 600;
+}
+header nav .bars i {
+  color: black;
+}
+header nav .search_cart {
   display: none;
 }
 
-.header .menu-btn:checked ~ .menu {
-  max-height: 240px;
+.activeShow {
+  right: 0 !important;
 }
 
-.header .menu-btn:checked ~ .menu-icon .navicon {
-  background: transparent;
+.section1 {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  margin: 1rem auto;
 }
-
-.header .menu-btn:checked ~ .menu-icon .navicon:before {
-  transform: rotate(-45deg);
+.section1 .textIntro {
+  text-align: center;
 }
-
-.header .menu-btn:checked ~ .menu-icon .navicon:after {
-  transform: rotate(45deg);
+.section1 .textIntro h1 {
+  font-size: 2rem;
+  font-weight: 400;
 }
-
-.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
-.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
-  top: 0;
+.section1 .textIntro h1 .best {
+  font-size: 2rem;
+  color: hsl(46deg, 89%, 55%);
+}
+.section1 .textIntro h1 b {
+  font-size: 2rem;
+  color: hsl(196deg, 35%, 11%);
+}
+.section1 .textIntro p {
+  line-height: 1.5;
+  color: #58666B;
+}
+.section1 .textIntro .btn1_btn2 {
+  margin-top: 2rem;
+  display: flex;
+  justify-content: center;
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
+}
+.section1 .textIntro .btn1_btn2 .btn1Container {
+  display: flex;
+}
+.section1 .textIntro .btn1_btn2 .btn1Container button {
+  display: flex;
+  align-items: flex-end;
+  background-color: hsl(196deg, 25%, 15%);
+  border: none;
+  border-radius: 8px;
+  padding: 0.5rem 2rem;
+}
+.section1 .textIntro .btn1_btn2 .btn2Container {
+  display: flex;
+}
+.section1 .textIntro .btn1_btn2 .btn2Container button {
+  display: flex;
+  align-items: center;
+  background-color: white;
+  border: none;
+  border-radius: 8px;
+}
+.section1 .textIntro .btn1_btn2 .btn2Container button img {
+  width: 25%;
 }/*# sourceMappingURL=style.css.map */
