--- a/styles/base/_reset.scss
+++ b/styles/base/_reset.scss
@@ -1,6 +1,11 @@
 * {
     padding: 0;
     margin: 0;
-    font-family: Helvetica, sans-serif;
-    background-color: #f4f4f4;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
+    font-size: 18px;
+    font-family: 'Montserrat', sans-serif;
+    scroll-behavior: smooth;
+    // background-color: #f4f4f4;
   }
