--- a/style.css
+++ b/style.css
@@ -138,6 +138,7 @@ header nav .search_cart {
   display: flex;
   align-items: flex-end;
   background-color: hsl(196deg, 25%, 15%);
+  color: white;
   border: none;
   border-radius: 8px;
   padding: 0.5rem 2rem;
@@ -154,4 +155,48 @@ header nav .search_cart {
 }
 .section1 .textIntro .btn1_btn2 .btn2Container button img {
   width: 25%;
+}
+.section1 .introImgContainer {
+  margin-top: 3rem;
+}
+.section1 .introImgContainer img {
+  width: 100%;
+}
+
+.section2 {
+  padding-top: 4rem;
+}
+.section2 h1 {
+  font-size: 2rem;
+  font-weight: 500;
+  text-align: center;
+  padding-bottom: 1rem;
+}
+.section2 p {
+  text-align: center;
+  line-height: 1.5;
+  color: hsl(196deg, 10%, 38%);
+}
+.section2 .collection {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+.section2 .collection .allFurnitures {
+  background-color: hsl(180deg, 27%, 98%);
+  padding: 0.5rem 1rem;
+  width: 80%;
+  margin: 1rem auto;
+  border-radius: 2rem;
+  border: none;
+  transition: 0.5s ease;
+}
+.section2 .collection .allFurnitures:hover {
+  background-color: hsl(164deg, 71%, 42%);
+}
+.section2 .collection .allFurnitures:hover:hover p {
+  color: white;
+}
+.section2 .collection .allFurnitures p {
+  text-align: center;
+  color: black;
 }/*# sourceMappingURL=style.css.map */
