--- a/styles/layouts/_section.scss
+++ b/styles/layouts/_section.scss
@@ -1,107 +1,179 @@
-.section1{
-    display: flex;
-    flex-direction: column;
-    width: 90%;
-    margin: 1rem auto;
-    .textIntro{
-        text-align: center;
-        h1{
-            font-size: 2rem;
-            font-weight: 400;
-            .best{
-                font-size: 2rem;
-                color: hsla(46, 89%, 55%, 1);
-            }
-            b{
-                font-size: 2rem;
-                color: hsla(196, 35%, 11%, 1);
-            }
-        }
-        p{
-            // padding-top: 5vh;
-            line-height: 1.5;
-            color: #58666B;
-        }
-
-        .btn1_btn2{
-            margin-top: 2rem;
-            display: flex;
-            justify-content: center;
-            column-gap: 1rem;
-            .btn1Container{
-                display: flex;
-                button{
-                    display: flex;
-                    align-items: flex-end;
-                    background-color: hsla(196, 25%, 15%, 1);
-                    color: white;
-                    border: none;
-                    border-radius: 8px;
-                    padding: .5rem 2rem;
-                }
-            }
-
-            .btn2Container{
-                display: flex;
-                // width: 50%;
-                // margin: 0 auto;
-                button{
-                    display: flex;
-                    align-items: center;
-                    background-color: white;
-                    border: none;
-                    border-radius: 8px;
-                    img{
-                        width: 25%;
-                    }
-                }
-            }
-        }
+.section1 {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  margin: 10vh auto;
+  .textIntro {
+    text-align: center;
+    h1 {
+      font-size: 2rem;
+      font-weight: 400;
+      .best {
+        font-size: 2rem;
+        color: hsla(46, 89%, 55%, 1);
+      }
+      b {
+        font-size: 2rem;
+        color: hsla(196, 35%, 11%, 1);
+      }
+    }
+    p {
+      // padding-top: 5vh;
+      line-height: 1.5;
+      color: #58666b;
     }
 
-    .introImgContainer{
-        margin-top: 3rem;
-        img{
-            width: 100%;
+    .btn1_btn2 {
+      margin-top: 2rem;
+      display: flex;
+      justify-content: center;
+      column-gap: 1rem;
+      .btn1Container {
+        display: flex;
+        button {
+          display: flex;
+          align-items: flex-end;
+          background-color: hsla(196, 25%, 15%, 1);
+          color: white;
+          border: none;
+          border-radius: 8px;
+          padding: 0.5rem 2rem;
         }
+      }
+
+      .btn2Container {
+        display: flex;
+        // width: 50%;
+        // margin: 0 auto;
+        button {
+          display: flex;
+          align-items: center;
+          background-color: white;
+          border: none;
+          border-radius: 8px;
+          img {
+            width: 25%;
+          }
+        }
+      }
     }
+  }
+
+  .introImgContainer {
+    margin-top: 3rem;
+    img {
+      width: 100%;
+    }
+  }
 }
 
-.section2{
-    padding-top: 4rem;
-    h1{
-        font-size: 2rem;
-        font-weight: 500;
-        text-align: center;
-        padding-bottom: 1rem;
-    }
-    p{
-        text-align: center;
-        line-height: 1.5;
-        color: hsla(196, 10%, 38%, 1);
-    }
+.section2 {
+  padding-top: 4rem;
+  h1 {
+    font-size: 2rem;
+    font-weight: 500;
+    text-align: center;
+    width: 90%;
+    margin: 0 auto;
+    padding-bottom: 1rem;
+  }
+  p {
+    text-align: center;
+    width: 90%;
+    margin: 0 auto;
+    line-height: 1.5;
+    color: hsla(196, 10%, 38%, 1);
+  }
 
-    .collection{
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        .allFurnitures{
-            background-color: hsla(180, 27%, 98%, 1);
-            padding: .5rem 1rem;
-            width: 80%;
-            margin: 1rem auto;
-            border-radius: 2rem;
-            border: none;
-            transition: .5s ease;
-            &:hover{
-                background-color: hsla(164, 71%, 42%, 1);
-                &:hover p{
-                    color: white;
-                }
-            }
-            p{
-                text-align: center;
-                color: black;
-            }
+  
+
+  .dropbtn {
+    background-color: hsla(164, 71%, 42%, 1);
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+
+  .dropbtn:hover,
+  .dropbtn:focus {
+    background-color: hsla(164, 71%, 42%, 1);
+  }
+
+  .dropdownContainer{
+    display: flex;
+    justify-content: center;
+    margin-top: 5%;
+  }
+
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+
+  .dropdown-content {
+    text-align: center;
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+  }
+
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+
+  .dropdown a:hover {
+    background-color: #ddd;
+  }
+
+  .show {
+    display: block;
+  }
+  .collection{
+    display: none;
+  }
+
+  .furnitureAssets{
+    padding-top: 5vh;
+    .chair{
+      background-color: hsla(180, 27%, 98%, 1);
+      border-radius: 8px;
+      width: 90%;
+      margin: auto;
+      .chairImg{
+        margin: 0 auto;
+        width: 90%;
+        img{
+          width: 100%;
         }
+      }
+      .homeWooden{
+        text-transform: capitalize;
+        font-weight: 700;
+        text-align: center;
+        color: black;
+        // margin-left: 4rem;
+      }
+      .grey_green{
+        display: flex;
+        padding-top: 3vh;
+        .grey{
+          font-weight: 600;
+        }
+        .green{
+          font-weight: 600;
+          color: hsla(164, 71%, 42%, 1);
+        }
+      }
     }
+  }
 }
