--- a/styles/layouts/_section.scss
+++ b/styles/layouts/_section.scss
@@ -86,9 +86,9 @@
   }
 
   .dropbtn {
-    background-color: hsla(164, 71%, 42%, 1);
+    background-color: hsla(196, 10%, 38%, 1);
     color: white;
-    padding: 16px;
+    padding: 16px 27px;
     font-size: 16px;
     border: none;
     border-radius: 5px;
@@ -97,6 +97,7 @@
 
   .dropbtn:hover,
   .dropbtn:focus {
+    transition: .5s ease;
     background-color: hsla(164, 71%, 42%, 1);
   }
 
@@ -134,7 +135,7 @@
   }
 
   .show {
-    display: block;
+    display: block !important;
   }
   .collection {
     display: none;
